refactor(ui): update tooltip and legend positions in CustomerReportPage.xaml for improved chart visibility

--- a/StormPC/StormPC/Views/Dashboard/CustomerReportPage.xaml
+++ b/StormPC/StormPC/Views/Dashboard/CustomerReportPage.xaml
@@ -175,7 +175,8 @@
                                  Series="{x:Bind ViewModel.PurchaseTrendsSeries, Mode=OneWay}"
                                  XAxes="{x:Bind ViewModel.XAxes, Mode=OneWay}"
                                  YAxes="{x:Bind ViewModel.YAxes, Mode=OneWay}"
-                                 TooltipPosition="Hidden">
+                                 TooltipPosition="Top"
+                                 LegendPosition="Top">
                 </lvc:CartesianChart>
             </Grid>
 
