--- a/StormPC/StormPC/Views/Dashboard/RevenueReportPage.xaml
+++ b/StormPC/StormPC/Views/Dashboard/RevenueReportPage.xaml
@@ -172,7 +172,8 @@
                          Style="{ThemeResource SubtitleTextBlockStyle}"
                          Margin="0,0,0,8"/>
                 <lvc:CartesianChart Grid.Row="1"
-                                 Series="{x:Bind ViewModel.CategoryRevenueSeries, Mode=OneWay}">
+                                 Series="{x:Bind ViewModel.CategoryRevenueSeries, Mode=OneWay}"
+                                 YAxes="{x:Bind ViewModel.CategoryYAxes, Mode=OneWay}">
                 </lvc:CartesianChart>
             </Grid>
 
