--- a/StormPC/StormPC/Views/Dashboard/InventoryReportPage.xaml
+++ b/StormPC/StormPC/Views/Dashboard/InventoryReportPage.xaml
@@ -18,6 +18,8 @@
     <Page.Resources>
         <helpers:NumberFormatConverter x:Key="NumberFormatConverter"/>
         <helpers:CurrencyConverter x:Key="CurrencyConverter"/>
+        <helpers:PercentageConverter x:Key="PercentageConverter"/>
+        <helpers:DateTimeConverter x:Key="DateTimeConverter"/>
         <Style x:Key="CardStyle" TargetType="Grid">
             <Setter Property="Background" Value="{ThemeResource CardBackgroundFillColorDefaultBrush}"/>
             <Setter Property="BorderBrush" Value="{ThemeResource CardStrokeColorDefaultBrush}"/>
@@ -83,34 +85,28 @@
                 <Grid Grid.Column="0" Style="{StaticResource KPICardStyle}" Margin="5">
                     <StackPanel>
                         <TextBlock Text="Tổng sản phẩm" Style="{StaticResource KPITitleStyle}"/>
-                        <TextBlock Text="{x:Bind ViewModel.TotalProducts, Mode=OneWay}" Style="{StaticResource KPIValueStyle}"/>
+                        <TextBlock Text="{x:Bind ViewModel.TotalProducts, Mode=OneWay, Converter={StaticResource NumberFormatConverter}}" Style="{StaticResource KPIValueStyle}"/>
                     </StackPanel>
                 </Grid>
 
                 <Grid Grid.Column="1" Style="{StaticResource KPICardStyle}" Margin="5">
                     <StackPanel>
                         <TextBlock Text="Tổng tồn kho" Style="{StaticResource KPITitleStyle}"/>
-                        <TextBlock Text="{x:Bind ViewModel.TotalStock, Mode=OneWay}" Style="{StaticResource KPIValueStyle}"/>
+                        <TextBlock Text="{x:Bind ViewModel.TotalStock, Mode=OneWay, Converter={StaticResource NumberFormatConverter}}" Style="{StaticResource KPIValueStyle}"/>
                     </StackPanel>
                 </Grid>
 
                 <Grid Grid.Column="2" Style="{StaticResource KPICardStyle}" Margin="5">
                     <StackPanel>
                         <TextBlock Text="Giá trị tồn kho" Style="{StaticResource KPITitleStyle}"/>
-                        <TextBlock Style="{StaticResource KPIValueStyle}">
-                            <Run Text="{x:Bind ViewModel.TotalValue, Mode=OneWay}"/>
-                            <Run Text="VNĐ"/>
-                        </TextBlock>
+                        <TextBlock Text="{x:Bind ViewModel.TotalValue, Mode=OneWay, Converter={StaticResource CurrencyConverter}}" Style="{StaticResource KPIValueStyle}"/>
                     </StackPanel>
                 </Grid>
 
                 <Grid Grid.Column="3" Style="{StaticResource KPICardStyle}" Margin="5">
                     <StackPanel>
                         <TextBlock Text="Giá trị TB/SP" Style="{StaticResource KPITitleStyle}"/>
-                        <TextBlock Style="{StaticResource KPIValueStyle}">
-                            <Run Text="{x:Bind ViewModel.AverageStockValue, Mode=OneWay}"/>
-                            <Run Text="VNĐ"/>
-                        </TextBlock>
+                        <TextBlock Text="{x:Bind ViewModel.AverageStockValue, Mode=OneWay, Converter={StaticResource CurrencyConverter}}" Style="{StaticResource KPIValueStyle}"/>
                     </StackPanel>
                 </Grid>
 
@@ -118,7 +114,7 @@
                     <StackPanel>
                         <TextBlock Text="Tỷ lệ quay vòng" Style="{StaticResource KPITitleStyle}"/>
                         <TextBlock Style="{StaticResource KPIValueStyle}">
-                            <Run Text="{x:Bind ViewModel.StockTurnoverRate, Mode=OneWay}"/>
+                            <Run Text="{x:Bind ViewModel.StockTurnoverRate, Mode=OneWay, Converter={StaticResource NumberFormatConverter}}"/>
                             <Run Text="lần"/>
                         </TextBlock>
                     </StackPanel>
@@ -127,7 +123,7 @@
                 <Grid Grid.Column="5" Style="{StaticResource KPICardStyle}" Margin="5">
                     <StackPanel>
                         <TextBlock Text="Sắp hết hàng" Style="{StaticResource KPITitleStyle}"/>
-                        <TextBlock Text="{x:Bind ViewModel.LowStockProducts, Mode=OneWay}" Style="{StaticResource KPIValueStyle}"/>
+                        <TextBlock Text="{x:Bind ViewModel.LowStockProducts, Mode=OneWay, Converter={StaticResource NumberFormatConverter}}" Style="{StaticResource KPIValueStyle}"/>
                     </StackPanel>
                 </Grid>
             </Grid>
@@ -180,10 +176,10 @@
                              Margin="0,10,0,0">
                         <grid:DataGrid.Columns>
                             <grid:DataGridTextColumn Header="Danh mục" Binding="{Binding CategoryName}"/>
-                            <grid:DataGridTextColumn Header="Số SP" Binding="{Binding TotalProducts}"/>
-                            <grid:DataGridTextColumn Header="Tồn kho" Binding="{Binding TotalStock}"/>
-                            <grid:DataGridTextColumn Header="Giá trị" Binding="{Binding TotalValue}"/>
-                            <grid:DataGridTextColumn Header="% Tổng" Binding="{Binding PercentageOfTotal}"/>
+                            <grid:DataGridTextColumn Header="Số SP" Binding="{Binding TotalProducts, Converter={StaticResource NumberFormatConverter}}"/>
+                            <grid:DataGridTextColumn Header="Tồn kho" Binding="{Binding TotalStock, Converter={StaticResource NumberFormatConverter}}"/>
+                            <grid:DataGridTextColumn Header="Giá trị" Binding="{Binding TotalValue, Converter={StaticResource CurrencyConverter}}"/>
+                            <grid:DataGridTextColumn Header="% Tổng" Binding="{Binding PercentageOfTotal, Converter={StaticResource PercentageConverter}}"/>
                         </grid:DataGrid.Columns>
                     </grid:DataGrid>
                 </Grid>
@@ -212,10 +208,10 @@
                              Margin="0,10,0,0">
                         <grid:DataGrid.Columns>
                             <grid:DataGridTextColumn Header="Thương hiệu" Binding="{Binding BrandName}"/>
-                            <grid:DataGridTextColumn Header="Số SP" Binding="{Binding TotalProducts}"/>
-                            <grid:DataGridTextColumn Header="Tồn kho" Binding="{Binding TotalStock}"/>
-                            <grid:DataGridTextColumn Header="Giá trị" Binding="{Binding TotalValue}"/>
-                            <grid:DataGridTextColumn Header="% Tổng" Binding="{Binding PercentageOfTotal}"/>
+                            <grid:DataGridTextColumn Header="Số SP" Binding="{Binding TotalProducts, Converter={StaticResource NumberFormatConverter}}"/>
+                            <grid:DataGridTextColumn Header="Tồn kho" Binding="{Binding TotalStock, Converter={StaticResource NumberFormatConverter}}"/>
+                            <grid:DataGridTextColumn Header="Giá trị" Binding="{Binding TotalValue, Converter={StaticResource CurrencyConverter}}"/>
+                            <grid:DataGridTextColumn Header="% Tổng" Binding="{Binding PercentageOfTotal, Converter={StaticResource PercentageConverter}}"/>
                         </grid:DataGrid.Columns>
                     </grid:DataGrid>
                 </Grid>
@@ -248,10 +244,10 @@
                         <grid:DataGridTextColumn Header="Tên sản phẩm" Binding="{Binding ModelName}"/>
                         <grid:DataGridTextColumn Header="Danh mục" Binding="{Binding CategoryName}"/>
                         <grid:DataGridTextColumn Header="Thương hiệu" Binding="{Binding BrandName}"/>
-                        <grid:DataGridTextColumn Header="Tồn kho" Binding="{Binding StockQuantity}"/>
-                        <grid:DataGridTextColumn Header="Giá trị" Binding="{Binding StockValue}"/>
-                        <grid:DataGridTextColumn Header="Số ngày tồn" Binding="{Binding DaysInStock}"/>
-                        <grid:DataGridTextColumn Header="Lần bán cuối" Binding="{Binding LastSoldDate}"/>
+                        <grid:DataGridTextColumn Header="Tồn kho" Binding="{Binding StockQuantity, Converter={StaticResource NumberFormatConverter}}"/>
+                        <grid:DataGridTextColumn Header="Giá trị" Binding="{Binding StockValue, Converter={StaticResource CurrencyConverter}}"/>
+                        <grid:DataGridTextColumn Header="Số ngày tồn" Binding="{Binding DaysInStock, Converter={StaticResource NumberFormatConverter}}"/>
+                        <grid:DataGridTextColumn Header="Lần bán cuối" Binding="{Binding LastSoldDate, Converter={StaticResource DateTimeConverter}}"/>
                     </grid:DataGrid.Columns>
                 </grid:DataGrid>
             </Grid>
@@ -276,10 +272,10 @@
                         <grid:DataGridTextColumn Header="Tên sản phẩm" Binding="{Binding ModelName}"/>
                         <grid:DataGridTextColumn Header="Danh mục" Binding="{Binding CategoryName}"/>
                         <grid:DataGridTextColumn Header="Thương hiệu" Binding="{Binding BrandName}"/>
-                        <grid:DataGridTextColumn Header="Tồn kho" Binding="{Binding CurrentStock}"/>
-                        <grid:DataGridTextColumn Header="TB bán/tháng" Binding="{Binding AverageMonthlySales}"/>
-                        <grid:DataGridTextColumn Header="Đề xuất nhập" Binding="{Binding SuggestedReorderQuantity}"/>
-                        <grid:DataGridTextColumn Header="Giá trị nhập" Binding="{Binding EstimatedValue}"/>
+                        <grid:DataGridTextColumn Header="Tồn kho" Binding="{Binding CurrentStock, Converter={StaticResource NumberFormatConverter}}"/>
+                        <grid:DataGridTextColumn Header="TB bán/tháng" Binding="{Binding AverageMonthlySales, Converter={StaticResource NumberFormatConverter}}"/>
+                        <grid:DataGridTextColumn Header="Đề xuất nhập" Binding="{Binding SuggestedReorderQuantity, Converter={StaticResource NumberFormatConverter}}"/>
+                        <grid:DataGridTextColumn Header="Giá trị nhập" Binding="{Binding EstimatedValue, Converter={StaticResource CurrencyConverter}}"/>
                     </grid:DataGrid.Columns>
                 </grid:DataGrid>
             </Grid>
